Standard transformer example (#151)
* Refactor feast enricher and custom transformer example

* Add standard transformer notebook example

* Update pyfunc custom transformer description

* Update pyfunc custom transformer description

--- a/examples/transformer/custom-transformer/PyFunc-Transformer.ipynb
+++ b/examples/transformer/custom-transformer/PyFunc-Transformer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PyFunc Model + Transformer Example\n",
     "\n",
-    "This notebook demonstrates how to deploy a Python function based model and a custom transformer. This type of model is useful as user would be able to define their own logic inside the model as long as it satisfy contract given in `merlin.PyFuncModel`. If the pre/post-processing steps could be implemented in Python, it's encouraged to write them in the PyFunc model code instead of separating them into another transformer.accepts a tensor input. The transformer has preprocessing step that allows the user to send a raw image data and convert it to a tensor input.accepts a tensor input. The transformer has preprocessing step that allows the user to send a raw image data and convert it to a tensor input.\n",
+    "This notebook demonstrates how to deploy a Python function based model and a custom transformer. This type of model is useful as user would be able to define their own logic inside the model as long as it satisfy contract given in `merlin.PyFuncModel`. If the pre/post-processing steps could be implemented in Python, it's encouraged to write them in the PyFunc model code instead of separating them into another transformer.\n",
     "\n",
     "The model we are going to develop and deploy is a cifar10 model accepts a tensor input. The transformer has preprocessing step that allows the user to send a raw image data and convert it to a tensor input."
    ]
@@ -22,16 +22,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mYou are using pip version 19.0.3, however version 21.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install --upgrade -r requirements.txt > /dev/null"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import merlin\n",
     "\n",
-    "MERLIN_URL = \"merlin-api-url\"\n",
+    "MERLIN_URL = \"<MERLIN_HOST>/api/merlin\"\n",
     "\n",
     "merlin.set_url(MERLIN_URL)"
    ]
@@ -79,9 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    }
+   ],
    "source": [
     "PROJECT_NAME = \"sample\"\n",
     "\n",
@@ -105,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,9 +152,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/torchvision/datasets/lsun.py:8: DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working\n",
+      "  from collections import Iterable\n",
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar-10-python.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 170434560/170498071 [02:59<00:00, 1240089.84it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/cifar-10-python.tar.gz to ./data\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import torchvision\n",
@@ -162,9 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -198,9 +256,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "170500096it [03:10, 1240089.84it/s]                               "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1,  2000] loss: 2.176\n",
+      "[1,  4000] loss: 1.892\n",
+      "[1,  6000] loss: 1.704\n",
+      "[1,  8000] loss: 1.605\n",
+      "[1, 10000] loss: 1.533\n",
+      "[1, 12000] loss: 1.485\n",
+      "[2,  2000] loss: 1.421\n",
+      "[2,  4000] loss: 1.395\n",
+      "[2,  6000] loss: 1.356\n",
+      "[2,  8000] loss: 1.324\n",
+      "[2, 10000] loss: 1.311\n",
+      "[2, 12000] loss: 1.278\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "\n",
@@ -241,9 +325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.4970,  0.6247, -0.7129, -0.4137, -1.6248, -1.0954, -1.6954,  0.9694,\n",
+       "         -1.0732,  3.7799]], grad_fn=<AddmmBackward>)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataiter = iter(trainloader)\n",
     "inputs, labels = dataiter.next()\n",
@@ -261,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,9 +381,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting pytorch-model/model.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%file pytorch-model/model.py\n",
     "import torch.nn as nn\n",
@@ -330,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,9 +477,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'predictions': [[0.555002748966217,\n",
+       "   -1.7436292171478271,\n",
+       "   1.391134262084961,\n",
+       "   1.4474482536315918,\n",
+       "   -0.8920332193374634,\n",
+       "   0.520797610282898,\n",
+       "   0.13903649151325226,\n",
+       "   -1.9986869096755981,\n",
+       "   1.243778109550476,\n",
+       "   -1.5127893686294556]]}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -437,9 +561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021/06/23 05:41:28 WARNING mlflow.models.model: Logging model metadata to the tracking server has failed, possibly due older server version. The model artifacts have been logged successfully under gs://<MERLIN_BUCKET>/mlflow/604/7b57180c051842fe815adbacfa282541/artifacts. In addition to exporting model artifacts, MLflow clients 1.7.0 and above attempt to record model metadata to the  tracking store. If logging to a mlflow server via REST, consider  upgrading the server version to MLflow 1.7.0 or above.\n"
+     ]
+    }
+   ],
    "source": [
     "with merlin.new_model_version() as v:    \n",
     "    merlin.log_pyfunc_model(model_instance=CifarModel(),\n",
@@ -458,9 +590,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ariefrahmansyah/.pyenv/versions/3.7.3/lib/python3.7/site-packages/ipykernel/ipkernel.py:287: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n",
+      "Deploying model transformer-pyfunc version 2\n",
+      "0% [##############################] 100% | ETA: 00:00:00"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model transformer-pyfunc version 2 is deployed.\n",
+      "View model version logs: http://<MERLIN_HOST>/merlin/projects/1/models/601/versions/2/endpoints/f3c84055-1c4f-4b6c-aa7c-9c494024cc3f/logs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total time elapsed: 00:07:51\n"
+     ]
+    }
+   ],
    "source": [
     "from merlin.resource_request import ResourceRequest\n",
     "from merlin.transformer import Transformer\n",
@@ -483,9 +642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"predictions\": [[0.555002748966217, -1.7436292171478271, 1.391134262084961, 1.4474482536315918, -0.8920332193374634, 0.520797610282898, 0.13903649151325226, -1.9986869096755981, 1.243778109550476, -1.5127893686294556]]}'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "import requests\n",
@@ -513,9 +683,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deleting deployment of model transformer-pyfunc version 2 from enviroment id-staging\n"
+     ]
+    }
+   ],
    "source": [
     "merlin.undeploy(v)"
    ]
