--- a/examples/transformer/standard-transformer/Standard Transformer.ipynb
+++ b/examples/transformer/standard-transformer/Standard Transformer.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Standard Transformer Example\n",
     "\n",
-    "This notebook demonstrates how to deploy a PyFunc model and a standard transformer. The pyfunc model simply return the request from the transformer. While the transformer itself retrieve the feature from Feast server."
+    "This notebook demonstrates how to deploy a PyFunc model and a standard transformer. The pyfunc model is an echo model which simply returns the request from the transformer. While the transformer itself has preprocess and postprocess pipeline, including Feast feature retrieval, variable declaration, and table creation."
    ]
   },
   {
@@ -16,6 +16,15 @@
     "## Requirements\n",
     "\n",
     "- Authenticated to gcloud (```gcloud auth application-default login```)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
    ]
   },
   {
@@ -51,7 +60,7 @@
     "import merlin\n",
     "print(merlin.__version__)\n",
     "\n",
-    "MERLIN_URL = \"merlin-api-url\"\n",
+    "MERLIN_URL = \"<MERLIN_HOST>/api/merlin\"\n",
     "\n",
     "merlin.set_url(MERLIN_URL)"
    ]
@@ -101,7 +110,7 @@
    "source": [
     "from merlin.model import ModelType\n",
     "\n",
-    "MODEL_NAME = \"pyfunc-standard-transfo\"\n",
+    "MODEL_NAME = \"standard-transformer\"\n",
     "\n",
     "merlin.set_model(MODEL_NAME, ModelType.PYFUNC)"
    ]
@@ -142,8 +151,7 @@
     "        pass\n",
     "        \n",
     "    def infer(self, request, **kwargs):\n",
-    "        if \"feast_features\" in request:\n",
-    "            logging.info(pd.DataFrame(**request[\"feast_features\"][\"merchant_id\"]))\n",
+    "        logging.info(request)\n",
     "        return request"
    ]
   },
@@ -163,19 +171,11 @@
     "m = StandardModel()\n",
     "m.initialize({})\n",
     "m.infer(\n",
-    "    {\n",
-    "    \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ]\n",
-    "    }\n",
+    "   {\n",
+    "        \"lat\": -6.2335,\n",
+    "        \"lon\": 106.8022,     \n",
+    "        \"details\":\"{\\\"merchant_id\\\": 542958066}\"\n",
+    "   }\n",
     ")"
    ]
   },
@@ -194,28 +194,29 @@
    "source": [
     "m.infer(\n",
     "    {\n",
-    "        \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ], \n",
-    "        # feast_features will be populated by standard transformer\n",
-    "        \"feast_features\": {\n",
-    "          \"merchant_id\" : {\n",
-    "            \"columns\": [\n",
-    "                \"merchant_id\",\n",
-    "                \"merchant_discovery:delivery_time_estimate\"\n",
-    "            ],\n",
-    "            \"data\": [[\"M111\", 10],[\"M222\", 20],[\"M333\", 30], ]\n",
-    "          }\n",
-    "        }\n",
+    "  \"lat\": -6.2335,\n",
+    "  \"lon\": 106.8022,      \n",
+    "  \"details\":\"{\\\"merchant_id\\\": 542958066}\",\n",
+    "  \"feast_features\": {\n",
+    "      \"location_geohash\" : {\n",
+    "        \"columns\": [\n",
+    "            \"location_geohash\",\n",
+    "            \"poi_geohash:total\",\n",
+    "            \"poi_geohash:ppoi\"\n",
+    "        ],\n",
+    "        \"data\": [[\"qqguw34zpxkkh\", 3, 15]]\n",
+    "    },\n",
+    "    \"merchant_id\" : {\n",
+    "        \"columns\": [\n",
+    "            \"merchant_id\",\n",
+    "            \"merchant_ratings:average_rating\",\n",
+    "            \"merchant_ratings:total_ratings\"\n",
+    "        ],\n",
+    "        \"data\": [[\"542958066\", 4, 4]]\n",
+    "      },\n",
     "    }\n",
+    "}\n",
+    "\n",
     ")"
    ]
   },
@@ -273,9 +274,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with merlin.new_model_version() as v:    \n",
+    "with merlin.new_model_version(labels={\"service_type\": \"GO-RIDE\", \"date\": \"2021-06-23\"}) as v:    \n",
     "    merlin.log_pyfunc_model(model_instance=StandardModel(),\n",
-    "                            conda_env=\"standard_transformer_env.yaml\",\n",
+    "                            conda_env=\"env.yaml\",\n",
     "                            artifacts={})"
    ]
   },
@@ -285,7 +286,7 @@
    "source": [
     "### 3.2 Deploy Model and Transformer\n",
     "\n",
-    "To deploy a model and its transformer, you must pass a `transformer` object to `deploy()` function. Each of deployed model version will have its own generated url."
+    "To deploy a model and its transformer, you must pass a `transformer` object to `deploy()` function. Each of deployed model version will have its own generated url. The `transformer` object is initialized by specifying the YAML config file."
    ]
   },
   {
@@ -294,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat \"standard_transformer_config.yaml\""
+    "!cat \"config.yaml\""
    ]
   },
   {
@@ -308,7 +309,7 @@
     "from merlin.logger import Logger, LoggerConfig, LoggerMode\n",
     "\n",
     "# Create a transformer object and its resources requests\n",
-    "transformer_config_path = \"standard_transformer_config.yaml\"\n",
+    "transformer_config_path = \"config.yaml\"\n",
     "transformer = StandardTransformer(config_file=transformer_config_path,\n",
     "                                  enabled=True)\n",
     "\n",
@@ -329,23 +330,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import requests\n",
+    "import os\n",
     "\n",
-    "resp = requests.post(endpoint.url, json={\n",
-    "    \"merchants\": [\n",
-    "        {\n",
-    "            \"id\" : \"M111\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M222\"\n",
-    "        },\n",
-    "        {\n",
-    "            \"id\" : \"M333\"\n",
-    "        }\n",
-    "    ]\n",
-    "    }\n",
-    ")\n",
-    "resp.text"
+    "with open(os.path.join(\"request.json\"), \"r\") as f:\n",
+    "    req = json.load(f)\n",
+    "\n",
+    "resp = requests.post(endpoint.url, json=req)\n",
+    "pretty_json = json.loads(resp.text)\n",
+    "print (json.dumps(pretty_json, indent=2))"
    ]
   },
   {
