fix batch iris notebook

--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -567,7 +567,7 @@
     "    SELECT\n",
     "      *\n",
     "    FROM\n",
-    "      `{sink_table}`\n",
+    "      `{SINK_TABLE}`\n",
     "    LIMIT\n",
     "      100\"\"\")\n",
     "\n",
