fix ny taxi example

--- a/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
+++ b/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
@@ -570,11 +570,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_job = client.query(\"\"\"\n",
+    "query_job = client.query(f\"\"\"\n",
     "    SELECT\n",
     "      *\n",
     "    FROM\n",
-    "      `your-gcp-project.dataset.ny_taxi_prediction`\n",
+    "      `{SINK_TABLE}`\n",
     "    LIMIT\n",
     "      100\"\"\")\n",
     "\n",
