change all occurences of code_path top code_dir in notebooks

--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -333,7 +333,7 @@
     "1. `model_instance` is the instance of PyFunc model, the model has to extend `merlin.PyFuncModel` or `merlin.PyFuncModelV2`\n",
     "2. `conda_env` is path to conda environment yaml file. The environment yaml file must contain all dependency required by the PyFunc model.\n",
     "3. (Optional) `artifacts` is additional artifact that you want to include in the model\n",
-    "4. (Optional) `code_path` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
+    "4. (Optional) `code_dir` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
    ]
   },
   {
