updated requirements with cloudpickle==2.0.0

--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -50,6 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xgboost as xgb\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
