--- a/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
+++ b/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
@@ -61,6 +61,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from google.cloud import bigquery\n",
     "import numpy as np\n",
     "import pandas as pd\n",
