Update Merlin Examples to be compatible with latest Merlin (#266)
* fix batch iris notebook

* fix ny taxi example

* change all occurences of code_path top code_dir in notebooks

* set cloudpickle to 2.0.0

* fix metric example to log with cloudpickle 2.0.0

* updated requirements with cloudpickle==2.0.0

* fix model-endpoint example

* fix sklearn notebook

* fix rsc req nb

* fix xgboost eg

* remove redundant file

* pytorch req

* relax protobuf

* fix pr

* restore nb

* remove sdk pin

--- a/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
+++ b/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
@@ -61,6 +61,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from google.cloud import bigquery\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -468,7 +477,7 @@
     "1. `model_instance` is the instance of PyFunc model, the model has to extend `merlin.PyFuncModel` or `merlin.PyFuncModelV2`\n",
     "2. `conda_env` is path to conda environment yaml file. The environment yaml file must contain all dependency required by the PyFunc model.\n",
     "3. (Optional) `artifacts` is additional artifact that you want to include in the model\n",
-    "4. (Optional) `code_path` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
+    "4. (Optional) `code_dir` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
    ]
   },
   {
@@ -570,11 +579,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_job = client.query(\"\"\"\n",
+    "query_job = client.query(f\"\"\"\n",
     "    SELECT\n",
     "      *\n",
     "    FROM\n",
-    "      `your-gcp-project.dataset.ny_taxi_prediction`\n",
+    "      `{SINK_TABLE}`\n",
     "    LIMIT\n",
     "      100\"\"\")\n",
     "\n",
