--- a/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
+++ b/examples/batch/Batch Prediction Tutorial 1 - Iris Classifier.ipynb
@@ -50,6 +50,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install --upgrade -r requirements.txt > /dev/null"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xgboost as xgb\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -333,7 +342,7 @@
     "1. `model_instance` is the instance of PyFunc model, the model has to extend `merlin.PyFuncModel` or `merlin.PyFuncModelV2`\n",
     "2. `conda_env` is path to conda environment yaml file. The environment yaml file must contain all dependency required by the PyFunc model.\n",
     "3. (Optional) `artifacts` is additional artifact that you want to include in the model\n",
-    "4. (Optional) `code_path` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
+    "4. (Optional) `code_dir` is a list of directory containing python code that will be loaded during model initialization, this is required when `model_instance` depend on local python package"
    ]
   },
   {
@@ -567,7 +576,7 @@
     "    SELECT\n",
     "      *\n",
     "    FROM\n",
-    "      `{sink_table}`\n",
+    "      `{SINK_TABLE}`\n",
     "    LIMIT\n",
     "      100\"\"\")\n",
     "\n",
