update examples to be compatible with latest specs and dependencies

--- a/examples/pytorch/Pytorch.ipynb
+++ b/examples/pytorch/Pytorch.ipynb
@@ -40,13 +40,28 @@
    "source": [
     "import merlin\n",
     "import warnings\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.autograd import Variable\n",
+    "from torch.autograd import Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from merlin.model import ModelType\n",
-    "\n",
     "from sklearn.datasets import load_iris\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -217,7 +232,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Serialize Model"
+    "### 3.1 Serialize Model\n",
+    "\n",
+    "In this step, we will serialize the model and create an archive file for torchserve, then move the archive file (.mar) into the model-store folder."
    ]
   },
   {
@@ -230,6 +247,28 @@
     "model_path = os.path.join(model_dir, \"model.pt\")\n",
     "\n",
     "torch.save(net.state_dict(), model_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!torch-model-archiver --model-name model \\\n",
+    "                     --version 1.0 \\\n",
+    "                     --model-file pytorch-model/model.py \\\n",
+    "                     --serialized-file pytorch-model/model.pt \\\n",
+    "                     --handler pytorch-model/iris_handler.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv model.mar pytorch-model/model-store/"
    ]
   },
   {
