--- a/examples/tensorflow/Tensorflow.ipynb
+++ b/examples/tensorflow/Tensorflow.ipynb
@@ -261,10 +261,10 @@
     "# Define the input receiver for the raw tensors\n",
     "def serving_input_fn():\n",
     "    feature_spec = {\n",
-    "      'petal_length': tf.placeholder(dtype=tf.float32, shape=[None,1], name='petal_length'),\n",
-    "      'petal_width' : tf.placeholder(dtype=tf.float32, shape=[None,1], name='petal_width'),\n",
-    "      'sepal_length': tf.placeholder(dtype=tf.float32, shape=[None,1], name='sepal_length'),\n",
-    "      'sepal_width' : tf.placeholder(dtype=tf.float32, shape=[None,1], name='sepal_width'),\n",
+    "      'petal_length': tf.keras.Input(dtype=tf.dtypes.float32, shape=[None,1], name='petal_length'),\n",
+    "      'petal_width' : tf.keras.Input(dtype=tf.dtypes.float32, shape=[None,1], name='petal_width'),\n",
+    "      'sepal_length': tf.keras.Input(dtype=tf.dtypes.float32, shape=[None,1], name='sepal_length'),\n",
+    "      'sepal_width' : tf.keras.Input(dtype=tf.dtypes.float32, shape=[None,1], name='sepal_width'),\n",
     "    }\n",
     "    return tf.estimator.export.build_raw_serving_input_receiver_fn(feature_spec)()"
    ]
