add upi examples

--- a/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
+++ b/examples/batch/Batch Prediction Tutorial 2 - New York Taxi .ipynb
@@ -38,7 +38,7 @@
     "5. dropoff_latitude\n",
     "6. passenger_count\n",
     "\n",
-    "The data is available in BQ public dataset `bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015`. The table has 146,112,989 rows. We will train a model using a subset of data (50000 rows) and use the model to predict the whole table using merlin's batch prediction."
+    "The data is available in BQ public dataset `bigquery-public-data.new_york.tlc_yellow_trips_2015`. The table has 146,112,989 rows. We will train a model using a subset of data (50000 rows) and use the model to predict the whole table using merlin's batch prediction."
    ]
   },
   {
@@ -86,7 +86,7 @@
     "      passenger_count,\n",
     "      total_amount\n",
     "    FROM\n",
-    "      `bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015`\n",
+    "      `bigquery-public-data.new_york.tlc_yellow_trips_2015`\n",
     "    LIMIT\n",
     "      50000\"\"\")\n",
     "\n",
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model perform good enough, so let's use it predict the whole table (`bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015`) and store the result to `your-gcp-project.dataset.ny_taxi_prediction` table"
+    "The model perform good enough, so let's use it predict the whole table (`bigquery-public-data.new_york.tlc_yellow_trips_2015`) and store the result to `your-gcp-project.dataset.ny_taxi_prediction` table"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The batch prediction job will use `bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015` as data source and \"pickup_datetime\", \"pickup_longitude\", \"pickup_latitude\", \"dropoff_longitude\", \"dropoff_latitude\", \"passenger_count\" as features. The prediction result will be stored in `your-gcp-project.dataset.ny_taxi_prediction` table under `total_fare` column. \n",
+    "The batch prediction job will use `bigquery-public-data.new_york.tlc_yellow_trips_2015` as data source and \"pickup_datetime\", \"pickup_longitude\", \"pickup_latitude\", \"dropoff_longitude\", \"dropoff_latitude\", \"passenger_count\" as features. The prediction result will be stored in `your-gcp-project.dataset.ny_taxi_prediction` table under `total_fare` column. \n",
     "\n",
     "Since the data size is quite large, we will not use default resource request and instead specify the request using `PredictionJobResourceRequest` instance."
    ]
@@ -536,7 +536,7 @@
     "from merlin.batch.sink import BigQuerySink, SaveMode\n",
     "from merlin.batch.config import PredictionJobConfig, PredictionJobResourceRequest\n",
     "\n",
-    "SOURCE_TABLE = \"bigquery-public-data.new_york_taxi_trips.tlc_yellow_trips_2015\"\n",
+    "SOURCE_TABLE = \"bigquery-public-data.new_york.tlc_yellow_trips_2015\"\n",
     "SINK_TABLE=\"gcp-project.dataset.ny_taxi_prediction\"\n",
     "SINK_STAGING_BUCKET=\"gcs-bucket\"\n",
     "SERVICE_ACCOUNT_NAME=\"batch-service-account@gcp-project.iam.gserviceaccount.com\"\n",
