Fix custom model notebook examples

--- a/examples/custom-model/upi_v1/custom-model-upi.ipynb
+++ b/examples/custom-model/upi_v1/custom-model-upi.ipynb
@@ -5,7 +5,7 @@
    "id": "88acfbf4",
    "metadata": {},
    "source": [
-    "# Custom Model Sample"
+    "# Custom Model UPI Sample"
    ]
   },
   {
@@ -128,7 +128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c50c1d0",
    "metadata": {},
@@ -159,7 +158,7 @@
     "```\n",
     "\n",
     "\n",
-    "This image `ghcr.io/tiopramayudi/custom-predictor-go:v0.2` is built by using this [Dockerfile](./Dockerfile). The image contains go web service executable where the code you can find [here](./model-server)"
+    "This image `ghcr.io/tiopramayudi/custom-predictor-go:v0.2` is built by using this [Dockerfile](./Dockerfile). The image contains go web service executable where the code you can find [here](./)"
    ]
   },
   {
@@ -232,19 +231,10 @@
     "        prediction_table=driver_table,\n",
     "    )\n",
     "\n",
-    "def simple_forwarder_response(request : upi_pb2.PredictValuesRequest) -> upi_pb2.PredictValuesResponse:\n",
-    "    target_name = \"probability\"\n",
-    "    cols = [\"customer_id\", \"name\", \"rank\", \"rating\", \"vehicle\", \"previous_vehicle\"]\n",
-    "    indices = [\"row2\", \"row1\"]\n",
-    "    rows = [\n",
-    "        [1111, \"driver-2\", 2.5, 0.5, 2, 3],\n",
-    "        [1111, \"driver-1\", -2.5, 0.75, 0, 1]\n",
-    "    ]\n",
-    "    response_df = pd.DataFrame(columns=cols, data=rows, index=indices)\n",
-    "    response_table = df_to_table(response_df, \"transformed_driver_table\")\n",
+    "def simple_forwarder_response(request:upi_pb2.PredictValuesRequest) -> upi_pb2.PredictValuesResponse:\n",
     "    return upi_pb2.PredictValuesResponse(\n",
-    "        target_name=target_name,\n",
-    "        prediction_result_table=response_table\n",
+    "        target_name=request.target_name,\n",
+    "        prediction_result_table=request.prediction_table\n",
     "    )\n",
     "\n",
     "channel = grpc.insecure_channel(f\"{endpoint.url}:80\")\n",
@@ -256,7 +246,7 @@
     "\n",
     "assert response.metadata.prediction_id == request.metadata.prediction_id\n",
     "assert response.target_name == request.target_name\n",
-    "exp_response = simple_forwarder_response()\n",
+    "exp_response = simple_forwarder_response(request)\n",
     "print(request)\n",
     "assert response == exp_response\n"
    ]
