Change model name to respect model name char limit requirements.

--- a/examples/resource-request-gpu/Resource-Request-GPU.ipynb
+++ b/examples/resource-request-gpu/Resource-Request-GPU.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_model(\"resource-request\", ModelType.SKLEARN)"
+    "merlin.set_model(\"gpu\", ModelType.SKLEARN)"
    ]
   },
   {
