update new example for fastapi

--- a/examples/pyfunc/Pyfunc.ipynb
+++ b/examples/pyfunc/Pyfunc.ipynb
@@ -70,7 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_url(\"localhost:8080/api/merlin\")"
+    "# Set MLP Server\n",
+    "MERLIN_SERVER_URL = os.environ.get(\"MERLIN_SERVER_URL\", \"localhost:8080/api/merlin\")\n",
+    "merlin.set_url(MERLIN_SERVER_URL)"
    ]
   },
   {
@@ -396,7 +398,7 @@
   "kernelspec": {
    "display_name": "merlin-sdk",
    "language": "python",
-   "name": "merlin-sdk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -408,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
