add some comment on notebook

--- a/examples/sklearn/SKLearn.ipynb
+++ b/examples/sklearn/SKLearn.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!cat requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install --upgrade -r requirements.txt > /dev/null"
    ]
   },
@@ -38,13 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import merlin\n",
+    "# import basic\n",
     "import warnings\n",
     "import os\n",
+    "\n",
+    "# Import modeling lib\n",
     "from sklearn import svm\n",
     "from sklearn import datasets\n",
     "from joblib import dump\n",
     "from sklearn.datasets import load_iris\n",
+    "\n",
+    "# Load merlin SDK\n",
+    "import merlin\n",
     "from merlin.model import ModelType\n",
     "warnings.filterwarnings('ignore')"
    ]
@@ -72,6 +86,16 @@
     "# Set MLP Server\n",
     "MERLIN_SERVER_URL = os.environ.get(\"MERLIN_SERVER_URL\", \"localhost:8080/api/merlin\")\n",
     "merlin.set_url(MERLIN_SERVER_URL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print MLP Server URL\n",
+    "print(\"Merlin Server URL: {}\".format(MERLIN_SERVER_URL))"
    ]
   },
   {
@@ -155,14 +179,16 @@
     "model_dir = \"sklearn-model\"\n",
     "MODEL_FILE = \"model.joblib\"\n",
     "\n",
-    "url = \"\"\n",
-    "\n",
     "# Create new version of the model\n",
     "with merlin.new_model_version() as v:\n",
+    "\n",
+    "    # Start Model Training\n",
     "    clf = svm.SVC(gamma='scale')\n",
     "    iris = datasets.load_iris()\n",
     "    X, y = iris.data, iris.target\n",
     "    clf.fit(X, y)\n",
+    "    \n",
+    "    # Save model to local directory\n",
     "    dump(clf, os.path.join(model_dir, MODEL_FILE))\n",
     "    \n",
     "    # Upload the serialized model to MLP\n",
