config some URL to fetch from ENV

--- a/examples/pytorch/Pytorch.ipynb
+++ b/examples/pytorch/Pytorch.ipynb
@@ -86,7 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_url(\"localhost:8080/api/merlin\")"
+    "# Set MLP Server\n",
+    "MERLIN_SERVER_URL = os.environ.get(\"MERLIN_SERVER_URL\", \"localhost:8080/api/merlin\")\n",
+    "merlin.set_url(MERLIN_SERVER_URL)"
    ]
   },
   {
