--- a/examples/tensorflow/Tensorflow.ipynb
+++ b/examples/tensorflow/Tensorflow.ipynb
@@ -76,7 +76,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merlin.set_url(\"http://localhost:8080\")"
+    "# Set MLP Server\n",
+    "MERLIN_SERVER_URL = os.environ.get(\"MERLIN_SERVER_URL\", \"localhost:8080/api/merlin\")\n",
+    "merlin.set_url(MERLIN_SERVER_URL)"
    ]
   },
   {
